[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/bottom.gd" type="Script" id=1]
[ext_resource path="res://Assets/circle-clip-art-2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LongBlue.gd" type="Script" id=3]
[ext_resource path="res://Scripts/mid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Longbar.gd" type="Script" id=5]
[ext_resource path="res://Assets/Screen Shot 2023-01-25 at 5.48.52 PM.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Shortbar.gd" type="Script" id=7]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=8]
[ext_resource path="res://Assets/173782_green-circle-png.png" type="Texture" id=9]
[ext_resource path="res://Assets/Untitled-1-green-bar.jpeg" type="Texture" id=10]
[ext_resource path="res://Assets/battlenet.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/images.png" type="Texture" id=12]
[ext_resource path="res://Assets/yellow-dot-md.png" type="Texture" id=13]
[ext_resource path="res://Assets/red-screen.png" type="Texture" id=14]
[ext_resource path="res://Assets/6Tp5aB97c.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=16]
[ext_resource path="res://Scripts/top.gd" type="Script" id=17]
[ext_resource path="res://Scripts/ShortBlue.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Node2.gd" type="Script" id=19]
[ext_resource path="res://Assets/1st34.png" type="Texture" id=20]
[ext_resource path="res://Assets/Motherboard-Lineart-Drawing.webp" type="Texture" id=21]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1088.2

[sub_resource type="CircleShape2D" id=4]
radius = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 3.16228

[sub_resource type="CircleShape2D" id=6]
radius = 6.37978

[sub_resource type="CircleShape2D" id=7]
radius = 0.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.972549, 0.968627, 0.968627, 1 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 11 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 19 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
margin_left = -29.0
margin_top = -123.0
margin_right = 1345.0
margin_bottom = 881.0
color = Color( 0.492188, 0.492188, 0.492188, 1 )

[node name="winner" type="MarginContainer" parent="."]
visible = false
margin_left = 271.0
margin_top = 636.0
margin_right = 969.0
margin_bottom = 837.0

[node name="Panel" type="Panel" parent="winner"]
margin_right = 698.0
margin_bottom = 201.0
custom_styles/panel = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="winner"]
margin_right = 698.0
margin_bottom = 201.0

[node name="Panel" type="Panel" parent="winner/MarginContainer"]
visible = false
margin_right = 698.0
margin_bottom = 201.0

[node name="HBoxContainer" type="HBoxContainer" parent="winner/MarginContainer"]
margin_right = 698.0
margin_bottom = 201.0

[node name="Label" type="Label" parent="winner/MarginContainer/HBoxContainer"]
margin_top = 78.0
margin_right = 682.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 11 )
text = "  YOU DID IT, ITS WORKING. AGAIN !!!!!!!"

[node name="Motherboard-Lineart-Drawing" type="Sprite" parent="."]
show_behind_parent = true
light_mask = 0
position = Vector2( 216, 88 )
scale = Vector2( 0.2188, 0.1977 )
texture = ExtResource( 21 )
normal_map = ExtResource( 21 )
offset = Vector2( 2010.97, 1213.96 )

[node name="Box" type="KinematicBody2D" parent="."]
show_behind_parent = true

[node name="Sprite" type="Sprite" parent="Box"]
position = Vector2( 564, 496 )
scale = Vector2( 0.866667, 0.914286 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box"]
visible = false
shape = SubResource( 2 )

[node name="reddrag" type="KinematicBody2D" parent="Box"]
position = Vector2( 464, 488 )
rotation = 3.14159
scale = Vector2( 0.0170101, 0.0146199 )
input_pickable = true
motion/sync_to_physics = true
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box/reddrag"]
shape = SubResource( 1 )

[node name="Red" type="Sprite" parent="Box/reddrag"]
scale = Vector2( 1.26704, 1.37746 )
texture = ExtResource( 15 )

[node name="greendrag" type="KinematicBody2D" parent="."]
position = Vector2( 528, 488 )
rotation = 3.14159
scale = Vector2( 0.0170101, 0.0146199 )
input_pickable = true
motion/sync_to_physics = true
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="greendrag"]
shape = SubResource( 1 )

[node name="Green" type="Sprite" parent="greendrag"]
scale = Vector2( 5.07065, 5.83444 )
texture = ExtResource( 9 )

[node name="bluedrag" type="KinematicBody2D" parent="."]
position = Vector2( 600, 488 )
rotation = 3.14159
scale = Vector2( 0.0170101, 0.0146199 )
input_pickable = true
motion/sync_to_physics = true
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bluedrag"]
shape = SubResource( 1 )

[node name="Blue" type="Sprite" parent="bluedrag"]
position = Vector2( 0, -0.00195312 )
scale = Vector2( 8.17103, 9.90262 )
texture = ExtResource( 2 )

[node name="yellowdrag" type="KinematicBody2D" parent="."]
position = Vector2( 664, 488 )
rotation = 3.14159
scale = Vector2( 0.0170101, 0.0146199 )
input_pickable = true
motion/sync_to_physics = true
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="yellowdrag"]
shape = SubResource( 1 )

[node name="Red" type="Sprite" parent="yellowdrag"]
position = Vector2( -26.7937, -7.79289 )
scale = Vector2( 9.23576, 9.44098 )
texture = ExtResource( 13 )

[node name="Still Green" type="StaticBody2D" parent="."]
position = Vector2( 464, 88 )

[node name="Sprite" type="Sprite" parent="Still Green"]
scale = Vector2( 0.0966666, 0.103333 )
texture = ExtResource( 9 )

[node name="Shortbar" type="Sprite" parent="Still Green"]
visible = false
position = Vector2( 60, 264 )
scale = Vector2( 0.0693333, 0.0758334 )
texture = ExtResource( 10 )
script = ExtResource( 7 )

[node name="Longbar" type="Sprite" parent="Still Green"]
visible = false
position = Vector2( -0.717407, 147.923 )
rotation = 3.14159
scale = Vector2( 0.0160413, 0.851704 )
texture = ExtResource( 10 )
script = ExtResource( 5 )

[node name="green area" type="Area2D" parent="Still Green"]

[node name="greenshape" type="CollisionShape2D" parent="Still Green/green area"]
position = Vector2( 120, 264 )
shape = SubResource( 4 )

[node name="Still Blue" type="StaticBody2D" parent="."]
position = Vector2( 600, 168 )

[node name="ShortBlue" type="Sprite" parent="Still Blue"]
visible = false
position = Vector2( 54, 2.5625 )
scale = Vector2( 0.0520603, 0.0845959 )
texture = ExtResource( 6 )
script = ExtResource( 18 )

[node name="LongBlue" type="Sprite" parent="Still Blue"]
visible = false
position = Vector2( 99, 116 )
scale = Vector2( 0.0201667, 0.852799 )
texture = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Still Blue"]
scale = Vector2( 0.16, 0.158167 )
texture = ExtResource( 2 )

[node name="Blue area" type="Area2D" parent="Still Blue"]
position = Vector2( 99, 244 )

[node name="blueshape" type="CollisionShape2D" parent="Still Blue/Blue area"]
shape = SubResource( 5 )

[node name="Still Red" type="StaticBody2D" parent="."]
position = Vector2( 829.125, 505.562 )

[node name="Sprite" type="Sprite" parent="Still Red"]
visible = false
position = Vector2( -56.125, -198.562 )
scale = Vector2( 0.132514, 0.228273 )
texture = ExtResource( 14 )
script = ExtResource( 16 )

[node name="Sprite2" type="Sprite" parent="Still Red"]
scale = Vector2( 0.021125, 0.0224375 )
texture = ExtResource( 15 )

[node name="red area" type="Area2D" parent="Still Red"]
position = Vector2( 0.875, -415.562 )

[node name="redshape" type="CollisionShape2D" parent="Still Red/red area"]
shape = SubResource( 6 )

[node name="Still yeller" type="StaticBody2D" parent="."]
position = Vector2( 402, 407 )
scale = Vector2( 0.677279, 0.978412 )

[node name="bottom" type="Sprite" parent="Still yeller"]
visible = false
position = Vector2( 208.186, -5.11035 )
scale = Vector2( 1.28936, 0.115772 )
texture = ExtResource( 20 )
script = ExtResource( 1 )

[node name="mid" type="Sprite" parent="Still yeller"]
visible = false
position = Vector2( 377.983, -65.4121 )
scale = Vector2( 0.0830415, 0.718563 )
texture = ExtResource( 20 )
script = ExtResource( 4 )

[node name="top" type="Sprite" parent="Still yeller"]
visible = false
position = Vector2( 289.393, -113.449 )
scale = Vector2( 0.552537, 0.143713 )
texture = ExtResource( 20 )
script = ExtResource( 17 )

[node name="yellow area" type="Area2D" parent="Still yeller"]
position = Vector2( 186.039, -114.471 )
scale = Vector2( 0.193876, -0.0626186 )

[node name="yellowshape" type="CollisionShape2D" parent="Still yeller/yellow area"]
position = Vector2( 6.10352e-05, 6.10352e-05 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Still yeller"]
scale = Vector2( 0.209542, 0.144433 )
texture = ExtResource( 13 )

[node name="Instructions" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 96.0
margin_right = 376.0
margin_bottom = 232.0
rect_scale = Vector2( 1.00117, 1 )

[node name="Panel" type="Panel" parent="Instructions"]
margin_right = 378.0
margin_bottom = 136.0
custom_styles/panel = SubResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="Instructions"]
margin_right = 378.0
margin_bottom = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="Instructions/MarginContainer"]
margin_right = 378.0
margin_bottom = 136.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Instructions/MarginContainer/HBoxContainer"]
margin_top = 43.0
margin_right = 374.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 9 )
text = "  Drag and drop the circles in the right area 
  to repair the PC!"

[connection signal="mouse_entered" from="Box/reddrag" to="Box/reddrag" method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="Box/reddrag" to="Box/reddrag" method="_on_KinematicBody2D_mouse_exited"]
[connection signal="mouse_entered" from="greendrag" to="greendrag" method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="greendrag" to="greendrag" method="_on_KinematicBody2D_mouse_exited"]
[connection signal="mouse_entered" from="bluedrag" to="bluedrag" method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="bluedrag" to="bluedrag" method="_on_KinematicBody2D_mouse_exited"]
[connection signal="mouse_entered" from="yellowdrag" to="yellowdrag" method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="yellowdrag" to="yellowdrag" method="_on_KinematicBody2D_mouse_exited"]
[connection signal="body_entered" from="Still Green/green area" to="Still Green/Shortbar" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Still Green/green area" to="Still Green/Longbar" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Still Green/green area" to="Still Green/Shortbar" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Still Green/green area" to="Still Green/Longbar" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Still Blue/Blue area" to="Still Blue/ShortBlue" method="_on_Blue_area_body_entered"]
[connection signal="body_entered" from="Still Blue/Blue area" to="Still Blue/LongBlue" method="_on_Blue_area_body_entered"]
[connection signal="body_exited" from="Still Blue/Blue area" to="Still Blue/ShortBlue" method="_on_Blue_area_body_exited"]
[connection signal="body_exited" from="Still Blue/Blue area" to="Still Blue/LongBlue" method="_on_Blue_area_body_exited"]
[connection signal="body_entered" from="Still Red/red area" to="." method="_on_red_area_body_entered"]
[connection signal="body_entered" from="Still Red/red area" to="Still Red/Sprite" method="_on_red_area_body_entered"]
[connection signal="body_exited" from="Still Red/red area" to="Still Red/Sprite" method="_on_red_area_body_exited"]
[connection signal="body_entered" from="Still yeller/yellow area" to="." method="_on_yellow_area_body_entered"]
[connection signal="body_entered" from="Still yeller/yellow area" to="Still yeller/bottom" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Still yeller/yellow area" to="Still yeller/mid" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Still yeller/yellow area" to="Still yeller/top" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Still yeller/yellow area" to="Still yeller/bottom" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Still yeller/yellow area" to="Still yeller/mid" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Still yeller/yellow area" to="Still yeller/top" method="_on_Area2D_body_exited"]
